# sre-eks-observability-demo

./: .gitignore  .mcp.json  Makefile  README.md  ruff.toml
.github/workflows/: ci.yml
apps/api-gateway/: Dockerfile  main.py  requirements.txt
apps/order-service/: Dockerfile  main.py  requirements.txt
apps/payment-service/: Dockerfile  main.py  requirements.txt
docs/: ci-cd-setup.md  demo-walkthrough.md  tech-stack.md
infra/: Pulumi.yaml  __main__.py  config.py  requirements.txt
infra/components/: __init__.py  ecr_repos.py  eks_cluster.py  iam_github.py  rds_database.py  vpc.py
k8s/base/: db-init-job.yaml  db-secret.yaml  kustomization.yaml  namespace.yaml  service-account.yaml
mcp-server/: Dockerfile  config.py  pyproject.toml  requirements.txt  server.py  webhook.py
mcp-server/tests/: test_runbook.py  test_slo.py
mcp-server/tools/: kubernetes.py  postgresql.py  remediation.py  runbook.py  slo.py  vector_logs.py  victoriametrics.py
observability/: README.md
observability/grafana/: values.yaml
observability/otel-collector/: hpa.yaml  values.yaml
observability/postgres-exporter/: deployment.yaml  queries.yaml
observability/rules/: alerts.yaml  recording-rules.yaml
observability/vector/: values.yaml
observability/victoriametrics/: values.yaml  vmagent.yaml  vmalert.yaml  vmalertmanager.yaml  vmsingle.yaml
scripts/: build-push.sh  destroy.sh  load-test.sh  port-forward.sh  setup.sh
scripts/chaos/: deploy-broken.sh  inject-errors.sh  inject-latency.sh  (+2 more)
sre/: error-budget-policy.yaml  incident-response.md  postmortem-template.md  slo.yaml
(+32 files in other folders)
