[project]
name = "sre-mcp-server"
version = "0.1.0"
description = "AI SRE Agent — FastMCP server with 7 diagnostic and remediation tools"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.32.0",
    "kubernetes>=31.0.0",
    "psycopg2-binary>=2.9.10",
    "pyyaml>=6.0",
    "flask>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]
